# kdx-pi-cam

./: .env.example  .gitignore  AI.md  README.md  REQUIREMENTS.md  TASK.md  TESTS.md  app.py  bot_handler.py  cache_manager.py  config.py  main.py  motion_detector.py  pyproject.toml  video_processor.py
docs/: api_reference.md
infrastructure/: config.py
tests/: conftest.py  test_bot_handler.py  test_config.py  test_dependencies_validation.py  test_environment_validation.py  test_motion_detector.py  test_video_processor.py
